virker fram til retur